# instrumentation-tool

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  env.template
include/: probe.h
scripts/: opt.sh
src/: instrumentation.cpp  probe.cpp
tests/: Makefile  example.cpp
